Fix #31253: collada export default file name now is no longer always untitled.dae, but rather uses .blend file name like other exporters.

Patch by Gaia Clary.